# cuda_stuff

./: CMakeLists.txt  README
ballot/: CMakeLists.txt  ballot_atomicadd.cu  ballot_atomicadd2.cu
dynamic_parallelism/: Makefile  README
histogram/: CMakeLists.txt  ancillary_ballot_popc_attempts.cuh  ballot_popc_reducer.cuh  cub_block_histogram.cuh  histogram.cu  reducer.cuh  shmem_atomics_reducer.cuh  test_reducer.cuh  vectorized_load_atomics.cuh  warp_shmem_atomics_reducer.cuh
include/: Timer.h  Timer.h~
matmul/: CMakeLists.txt  matmul.cu
matmul_naive/: CMakeLists.txt  matmul_naive.cu
matmul_shmem/: CMakeLists.txt  matmul_shmem.cu
shffl/: CMakeLists.txt  shffl.cu
templatization/: CMakeLists.txt  README.md  device_container.h  templatization.cu
thrust/: CMakeLists.txt
vectorized_loads/: CMakeLists.txt  vectorized_loads.cu  vectorized_loads.cu~
warp_vote/: .CMakeLists.txt.swp  CMakeLists.txt  shffl.cu  shffl.cu~
